--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -42,7 +42,7 @@ jobs:
           import path from 'path';
           import { execSync } from 'child_process';
 
-          const resultsDir = '/__w/Ally-docs/Ally-docs/cypress-docs/results';
+          const resultsDir = '/__w/Ally-docs/Ally-docs/cypress-docs/results/OL.io';
           if (!fs.existsSync(resultsDir)) {
             console.log('No results directory found.');
             process.exit(0);
