--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install zip utility
+        run: apt-get update && apt-get install -y zip
+    
       - name: Analyze Accessibility Results
         id: analyze_results
         run: |
