--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -73,8 +73,8 @@ jobs:
 
             // Store output for next steps
             const fileNamesWithoutExt = violatingFiles.map(f => path.basename(f, '.json')).join(', ');
-            echo "violations=${fileNamesWithoutExt}" >> "$GITHUB_OUTPUT"
-            echo "zip_file=${zipName}" >> "$GITHUB_OUTPUT"
+            fs.appendFileSync(process.env.GITHUB_OUTPUT, `violations=${fileNamesWithoutExt}\n`);
+            fs.appendFileSync(process.env.GITHUB_OUTPUT, `zip_file=${zipName}\n`);
             console.log('Violations found in:', fileNamesWithoutExt);
           } else {
             console.log('No accessibility violations found.');
